--- a/css/main.css
+++ b/css/main.css
@@ -9,3 +9,12 @@
 .page-footer,.top-nav-collapse{background-color:#1C2331}@media only screen and (max-width:768px){.navbar{background-color:#1C2331}}
 
 
+
+nav.scrolled {
+  background: #0a0a0a;
+}
+nav {
+  transition: background .5s; /* control how smooth the background changes */
+}
+
+
